--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,8 +135,9 @@
     <string name="shopping">Shopping</string>
     <string name="things_to_do">Things to do</string>
 
-    <!--added 12/16/2015-->
+    <!--updated 12/16/2015-->
 
+    <string name="provider_authority">com.ojiofong.cityexplorer.provider</string>
     <string name="restaurant_nearby">Restaurant nearby</string>
 
     <!-- DEFAULT -->
